--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ exclude = [ ".dockerignore", ".editorconfig", ".gitattributes", ".github", ".git
 [dependencies]
 anyhow = "1"
 clap = { version = "3.2.5", features = ["derive"] }
+command-group = { version = "1.0.8", features = ["with-tokio"] }
 futures-util = "0.3"
-nix = "0.24.1"
+nix = "0.22"
 regex = "1.6.0"
 serde = { version = "1.0.126", features = ["derive"] }
 tokio = { version = "1.0", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync"] }
