--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,5 @@ serde = { version = "1.0.126", features = ["derive"] }
 tokio = { version = "1.0", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync"] }
 toml = "0.5"
 tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "std"] }
 users = "0.11.0"
