--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,19 @@ edition = "2021"
 rust-version = "1.60"
 exclude = [ ".dockerignore", ".editorconfig", ".gitattributes", ".github", ".gitignore" ]
 
+[features]
+_mocks = ["mockall"]
+
 [dependencies]
 anyhow = "1"
+async-trait = "0.1"
 clap = { version = "3.2.5", features = ["derive"] }
 command-group = { version = "1.0.8", features = ["with-tokio"] }
+mockall = { version = "0.11.0", optional = true }
 nix = "0.22"
 regex = "1.6.0"
 serde = { version = "1.0.126", features = ["derive"] }
+thiserror = "1.0"
 tokio = { version = "1.0", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync"] }
 toml = "0.5"
 tracing = "0.1"
