--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,11 @@ edition = "2021"
 rust-version = "1.60"
 exclude = [ ".dockerignore", ".editorconfig", ".gitattributes", ".github", ".gitignore" ]
 
-[features]
-_mocks = ["mockall"]
-
 [dependencies]
 anyhow = "1"
 async-trait = "0.1"
 clap = { version = "3.2.5", features = ["derive"] }
 command-group = { version = "1.0.8", features = ["with-tokio"] }
-mockall = { version = "0.11.0", optional = true }
 nix = "0.22"
 regex = "1.6.0"
 serde = { version = "1.0.126", features = ["derive"] }
@@ -25,3 +21,6 @@ toml = "0.5"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "std"] }
 users = "0.11.0"
+
+[dev-dependencies]
+mockall = "0.11.0"
