Use (TOML) config for the integration tests
Verifies that we are testing the config file format, but is also just
much shorter/clearer than creating the `Config` structs.

--- a/deny.toml
+++ b/deny.toml
@@ -11,8 +11,9 @@ ignore = []
 unlicensed = "deny"
 copyleft = "deny"
 allow = [
-    "MIT",
     "Apache-2.0",
+    "BSD-3-Clause",
+    "MIT",
 ]
 default = "deny"
 
