--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ users = "0.11.0"
 [dev-dependencies]
 mockall = "0.11.0"
 tempfile = "3.3.0"
+test-log = { version = "0.2", default-features = false, features = ["trace"] }
