--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,4 @@ users = "0.11.0"
 mockall = "0.11.0"
 tempfile = "3.3.0"
 test-log = { version = "0.2", default-features = false, features = ["trace"] }
+tokio = { version = "1.0", features = ["time"] }
