--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ users = "0.11.0"
 
 [dev-dependencies]
 indoc = "1.0.7"
+pretty_assertions = "1.3.0"
 tempfile = "3.3.0"
 test-log = { version = "0.2", default-features = false, features = ["trace"] }
 tokio = { version = "1.0", features = ["time"] }
