--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ clap = { version = "3.2.5", features = ["derive"] }
 color-eyre = { version = "0.6.2", default-features = false }
 command-group = { version = "1.0.8", features = ["with-tokio"] }
 nix = "0.22"
+once_cell = "1.16.0"
 regex = "1.6.0"
 serde = { version = "1.0.126", features = ["derive"] }
 thiserror = "1.0"
