--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,13 @@ exclude = [ ".dockerignore", ".editorconfig", ".gitattributes", ".github", ".git
 clap = { version = "3.2.5", features = ["derive"] }
 color-eyre = { version = "0.6.2", default-features = false }
 command-group = { version = "1.0.8", features = ["with-tokio"] }
+console = { version = "0.15.2", default-features = false, features = ["ansi-parsing"] }
 nix = "0.22"
 once_cell = "1.16.0"
 regex = "1.6.0"
 serde = { version = "1.0.126", features = ["derive"] }
 thiserror = "1.0"
+time = { version = "0.3.17", features = ["formatting", "macros"] }
 tokio = { version = "1.0", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync"] }
 toml = "0.5"
 tracing = "0.1"
