--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,9 @@ exclude = [ ".dockerignore", ".editorconfig", ".gitattributes", ".github", ".git
 [dependencies]
 clap = { version = "3.2.5", features = ["derive"] }
 color-eyre = { version = "0.6.2", default-features = false }
-command-group = { version = "1.0.8", features = ["with-tokio"] }
+command-group = { version = "2.0.0", features = ["with-tokio"] }
 console = { version = "0.15.2", default-features = false, features = ["ansi-parsing"] }
-nix = "0.22"
+nix = { version = "0.26.1", default-features = false, features = ["signal"] }
 once_cell = "1.16.0"
 regex = "1.6.0"
 serde = { version = "1.0.126", features = ["derive"] }
