--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
 # Cargo files are always saved as LF, even on Windows.
 Cargo.lock text eol=lf
 Cargo.toml text eol=lf
+
+# NPM files are always saved as LF, even on Windows.
+package.json text eol=lf
+package-lock.json text eol=lf
